--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div><img src="./asets/img/Mountains.png" id="Mountains" /></div>
       <div class="discover">
         <h1>DISCOVER</h1>
-        <p class="country">SWITZERLAND</p>
+        <p class="country" id="country">SWITZERLAND</p>
         <p class="scroll">SCROLL</p>
         <div class="line"></div>
       </div>
@@ -77,7 +77,7 @@
       <p>© 2025 Cosmos. All rights reserved.</p>
     </footer>
 
-    <section id="about"></section>
+    <!-- <section id="about"></section> -->
     <script src="./script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.4/dist/confetti.browser.min.js"></script>
     <script>
